src/test/resources/regressions/features/errors/bar/bar.gobra
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

package bar

// redeclare interface error:
type error interface {
    // currently empty as Gobra does not yet support strings
    // Error() string
    Test() int
}
